--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
 		"build": "next build",
 		"start": "next start",
 		"format": "biome format --write",
-		"lint": "npx @biomejs/biome check --write"
+		"lint": "./node_modules/.bin/biome check --write"
 	},
 	"dependencies": {
 		"@heroui/react": "^2.8.0-beta.6",
+		"@phosphor-icons/react": "^2.1.10",
 		"next": "15.3.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0"
