--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"format": "biome format --write",
+		"format": "./node_modules/.bin/biome format --write",
 		"lint": "./node_modules/.bin/biome check --write"
 	},
 	"dependencies": {
