remove unused imports

--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,8 @@
 		"rules": {
 			"recommended": true,
 			"correctness": {
-				"useExhaustiveDependencies": "warn"
+				"useExhaustiveDependencies": "warn",
+				"noUnusedImports": "error"
 			}
 		}
 	},
